[gd_scene load_steps=7 format=3 uid="uid://w2qot5iqr6gk"]

[ext_resource type="Script" uid="uid://b66ep0xdn0m38" path="res://cinematica.gd" id="1_nxcg5"]
[ext_resource type="FontFile" uid="uid://dudo3khf2v3o4" path="res://VT323-Regular.ttf" id="3_plcji"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nxcg5"]

[sub_resource type="Animation" id="Animation_plcji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_f4k22"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jkymw"]
_data = {
&"RESET": SubResource("Animation_plcji"),
&"fade_to_black": SubResource("Animation_f4k22")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxcg5")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -76.0
offset_right = 145.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_nxcg5")

[node name="Saltar" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = 10.0
offset_right = 88.0
offset_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_plcji")
theme_override_font_sizes/font_size = 13
text = "Saltar"
flat = true

[node name="Button_next" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = 7.0
offset_right = 23.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_plcji")
theme_override_font_sizes/font_size = 12
text = "Next"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -13.0
offset_right = 136.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_plcji")
theme_override_font_sizes/normal_font_size = 13
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jkymw")
}

[connection signal="pressed" from="Panel/Saltar" to="." method="_on_saltar_pressed"]
[connection signal="pressed" from="Panel/Button_next" to="." method="_on_button_next_pressed"]
